0.06001 2009-12-10

    - Test setting __uri_for(x)__ in a config file.

0.06000 2009-11-25

    - MultiForm actions now also always stash $multi->current_form
      to $c->stash->{form}.
      (key-name configurable via 'form_stash' config option).
    
    - New method suffixes such as "_FORM_VALID", "_FORM_SUBMITTED" to allow
      blocks of code that will only be run under certain circumstances.

0.05000 2009-07-06

    - Fix RequestToken to be a hidden field.
    
    - Fix compatibility problem with moosified controllers.
    
    - use tests_recursive() so all tests are run correctly.

0.04003 2009-04-20

    - Fix missing prereqs

0.04002 2009-04-20

    - Switch to use MRO::Compat

0.04001 2009-04-15

    - New RequestToken feature to stop double-submissions of data.
    
    - Silence "Reference is already weak" warnings.
    
    - Add distribution description to pod (RT #41568)

0.03007 2008-12-08

    - Bump required version no. of HTML-FormFu to 0.03007

0.03006 2008-12-03

    - Deprecated config setting $config->{config_file_path}
      use $config->{constructor}{config_file_path} instead.
    
    - Bumped HTML-FormFu prereq - need 0.03004 for load_config_filestem()
      support.

0.03004 2008-09-03

    - 'config_file_ext' config setting has been removed.
    
    - Automatically search for form config files with any extension
      supported by Config::Any.
    
    - Add __config()__ callback.
    
    - Support filestems (without extensions) in the FormConfig('file')
      attribute syntax.
    
    - Forms returned by form() now have the query set with the Catalyst
      request object.
    
    - Switched from ACCEPT_CONTEXT to using
      Catalyst::Component::InstancePerContext - recommended by mst.
    
    - Changed config examples to Config::General, to match Catalyst's
      core documentation.

0.03000 2008-06-19

	- Documented 'model_stash' option.
	- New Multi* actions - not documented yet - need further testing.

0.02000 2007-12-12
